book.css
.book {
    display: inline-block;
    background-color: rgb(49, 49, 49);
    text-align: center;
    height: 300px;
    width: 200px;
    border-radius: 20px;
    margin: 15px;
    padding: 15px;
    color: white;
    filter: drop-shadow(7px 7px 12px black);
    transition-duration: 0.2s;
}

.bookTop {
    width: 100%;
    text-align: center;
}

.bookBottom {
    display: inline-block;
    width: 170px;
    text-align: left;
    position: absolute;
    bottom: 15px;
    left: 15px;
}

.bookTitle {
    font-size: 18pt;
    font-weight: bold;
}

.bookAuthor {
    font-size: 12pt;
}

.bookPages {
    font-size: 13pt;
    padding-bottom: 3px;
}

#totalPages {
    padding-bottom: 15px;
}

.bookButton {
    width: 44px;
    height: 44px;
    margin: 0px;
    outline: none;
    border-radius: 22px;
    line-height: 0px;
    font-size: 12pt;
    color: white;
    box-shadow: inset 0px 0px 4px rgb(29, 29, 29);
    cursor: pointer;
}

.bookBottomButtons {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#editButton {
    background-color: rgb(76, 76, 153);
    transition-duration: 0.2s;
}

#editButton:hover {
    background-color: rgb(56, 56, 112);
}

#plusButton {
    background-color: rgb(66, 145, 66);
    transition-duration: 0.2s;
}

#plusButton:hover {
    background-color: rgb(48, 104, 48);
}

#minusButton {
    background-color: rgb(177, 83, 83);
    transition-duration: 0.2s;
}

#minusButton:hover {
    background-color: rgb(119, 56, 56);
}

